[package]
name = "rtsp-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.1"
log = "0.4.16"
env_logger = "0.9.0"
local-ip-address = "0.4.4"
async-lock = "2.5.0"
socket2 = "0.4.4"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "net", "rt-multi-thread"]
default-features = false

[dev-dependencies]
env_logger = "0.9.0"
gumdrop = "0.8.1"

[dev-dependencies.tokio]
version = "1.17.0"
features = ["full"]
